# mildred

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  clion.sh  setup.sh  tmux.sh
arduino/: .gitignore  make_library.sh
arduino/MotorControl/: MotorControl.ino
arduino/USB2Dynamixel4OpenCM9.04/: USB2Dynamixel4OpenCM9.04.ino
launch/: dynamixel_controller_dev.launch
launch/include/: ps3.launch  serial.launch
ref/: uwalker_control.cpp  uwalker_control.h  uwalker_controller.cpp  uwalker_controller.h  uwalker_remote_ps3.cpp  uwalker_remote_ps3.h  uwalker_state_publisher.cpp  uwalker_state_publisher.h  uwalker_test.cpp
ref/frame/: Body.cpp  Body.h  Joint.cpp  Joint.h  Leg.cpp  Leg.h
ref/gait/: ContinuousGait.cpp  ContinuousGait.h  Gait.cpp  Gait.h  gaits.h
ref/ik/: UChainIkSolverPosNRJL.cpp
ref/pid/: PIDControl.cpp  PIDControl.h
rqt/: Mildred.perspective
src/mildred/: CMakeLists.txt  package.xml
src/mildred/launch/: dynamixel_controller_dev.launch  dynamixel_manager.launch  mildred.launch
src/mildred_control/: CMakeLists.txt  package.xml
src/mildred_control/config/: rosconsole.conf
src/mildred_control/include/mildred_control/: MildredControl.h  mildred_control.h
src/mildred_control/include/mildred_control/frame/: Body.h  Joint.h  Leg.h
src/mildred_control/include/mildred_control/fsm/: Event.h  Machine.h  State.h  Transition.h
src/mildred_control/include/mildred_control/gait/: ContinuousGait.h  Gait.h  gaits.h
src/mildred_control/include/mildred_control/ik/: ChainIkSolverPos_NR_JL.h  UChainIkSolverPosNRJL.h
src/mildred_control/include/mildred_control/mildred/: Body.h  Joint.h  Leg.bak.h  Leg.h
src/mildred_control/include/mildred_control/mildred/states/: ControlMachine.h  ControlState.h
src/mildred_control/launch/: control.launch
src/mildred_control/src/: MildredControl.cpp  MildredControl.h  main.cpp  mildred_control.cpp
src/mildred_control/src/frame/: Body.cpp  Joint.cpp  Leg.cpp
src/mildred_control/src/fsm/: Machine.cpp
src/mildred_control/src/gait/: ContinuousGait.cpp  Gait.cpp
src/mildred_control/src/ik/: ChainIkSolverPos_NR_JL.cpp  UChainIkSolverPosNRJL.cpp
src/mildred_control/src/mildred/: Body.cpp  Body.h  Joint.cpp  Leg.bak.cpp  Leg.cpp  Leg.h
src/mildred_control/src/mildred/body/states/: IdleState.cpp  IdleState.h  SittingState.cpp  SittingState.h  StandingState.cpp  StandingState.h
src/mildred_control/src/mildred/states/: ControlMachine.cpp  ControlState.cpp  IdleState.cpp  IdleState.h  SittingState.cpp  SittingState.h  StandingState.cpp  StandingState.h  StartingState.cpp  StartingState.h  WalkingState.cpp  WalkingState.h  events.h
src/mildred_core/: CMakeLists.txt  package.xml
src/mildred_core/include/mildred_core/: mildred.h
src/mildred_core/msg/: MildredCommandMessage.msg  MildredControlMessage.msg  MildredStateMessage.msg
src/mildred_description/: .gitignore  CMakeLists.txt  package.xml
src/mildred_description/config/: mildred.rviz
src/mildred_description/launch/: load_model.launch  rviz.launch.py
src/mildred_description/stl/: body.stl  coxa.stl  femur.stl  tibia.stl  xl430.stl
src/mildred_description/urdf/: macros.xacro  mildred.urdf.xacro  variables.xacro
src/mildred_dynamixel/: CMakeLists.txt  README.md  package.xml
src/mildred_dynamixel/config/: config.yaml  mildred.yaml  rosconsole.conf
src/mildred_dynamixel/include/mildred_dynamixel/: DynamixelController.h  DynamixelTester.h  dynamixel_controller.h
src/mildred_dynamixel/launch/: dynamixel_controller.launch  dynamixel_controller.launch.py  dynamixel_tester.launch
src/mildred_dynamixel/msg/: DynamixelInfo.msg  DynamixelLoadInfo.msg  DynamixelState.msg  DynamixelStateList.msg
src/mildred_dynamixel/src/: DynamixelController.cpp  DynamixelTester.cpp  dynamixel_controller.cpp
src/mildred_dynamixel/srv/: DynamixelCommand.srv  GetDynamixelInfo.srv
src/mildred_gazebo/: CMakeLists.txt  package.xml
src/mildred_gazebo/config/: mildred_control.yaml
src/mildred_gazebo/launch/: mildred.launch
src/mildred_gazebo/worlds/: mildred.world
src/mildred_teleop/: CMakeLists.txt  package.xml
src/mildred_teleop/config/: rosconsole.conf
src/mildred_teleop/include/mildred_teleop/: MildredTeleop.h  MildredTeleopJoy.h  MildredTeleopJoyPS3.h  MildredTeleopJoyPS4.h
src/mildred_teleop/launch/: ps3.launch  ps4.launch
src/mildred_teleop/src/: MildredTeleop.cpp  MildredTeleopJoy.cpp  MildredTeleopJoyPS3.cpp  MildredTeleopJoyPS4.cpp  main.cpp  mildred_teleop_ps3.cpp  mildred_teleop_ps3.h
