<?xml version="1.0"?>
<package format="2">
  <name>mildred_control</name>
  <version>0.0.0</version>
  <description>The Mildred hexapod control nodes.</description>
  <maintainer email="ubald@ubaldesign.com">François Ubald Brien</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>mildred_core</depend>

  <export>

  </export>
</package>
