<?xml version="1.0"?>
<package format="2">
  <name>mildred_core</name>
  <version>0.0.0</version>
  <description>The mildred_core package</description>
  <maintainer email="ubald@todo.todo">ubald</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>

  </export>
</package>
