<?xml version="1.0"?>
<package format="2">
  <name>mildred_dynamixel</name>
  <version>0.0.0</version>
  <description>The Mildred hexapod dynamixel motor control nodes.</description>
  <maintainer email="ubald@ubaldesign.com">François Ubald Brien</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>

  <export>

  </export>
</package>
