<?xml version="1.0"?>
<package format="2">
  <name>mildred_gazebo</name>
  <version>0.0.0</version>
  <description>The Mildred hexapod gazebo simulation files.</description>
  <maintainer email="ubald@ubaldesign.com">François Ubald Brien</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mildred_description</depend>

  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>

  <depend>effort_controllers</depend>

  <export>
  </export>
</package>
