<?xml version="1.0"?>
<package format="2">
    <name>mildred_gazebo</name>
    <version>0.0.0</version>
    <description>The Mildred hexapod gazebo simulation files.</description>
    <maintainer email="ubald@ubaldesign.com">François Ubald Brien</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>mildred_description</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>effort_controllers</exec_depend>
</package>
