<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mildred_teleop</name>
  <version>0.0.0</version>
  <description>The Mildred hexapod remote control nodes.</description>
  <maintainer email="ubald@ubaldesign.com">François Ubald Brien</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>joy</depend>
  <depend>ps3joy</depend>
  <depend>mildred_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>